# advent2019

./: ..gitignore.un~  .gitmodules  AdventUtil.h  CMakeLists.txt  advent01.cpp  advent02.cpp  advent03.cpp  advent04.cpp  advent05.cpp  advent06.cpp  advent07.cpp  advent08.cpp  advent09.cpp  advent10.cpp  advent11.cpp  advent12.cpp  advent13.cpp  advent14.cpp  adventXX.cpp  conanfile.txt  dec17.cpp  intMachine.cpp  intMachine.h  settings.yml
